DS: Rollback and fixes MainMenuViewController.py again. Try load default picture